src/objects/Test_Scenarios__c.object
<CustomObject>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <label>Acceptance Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Test Scenarios</relationshipLabel>
        <relationshipName>Test_Scenarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Defect_Comments__c</fullName>
        <label>Comments</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Scenarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UAT_Approval_Date__c</fullName>
        <label>UAT Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UAT_Approver__c</fullName>
        <label>UAT Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Test Scenario</label>
    <nameField>
        <displayFormat>TS-{00000000}</displayFormat>
        <label>Test Scenario Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Scenarios</pluralLabel>
    <recordTypes>
        <fullName>QA_Test_Scenario</fullName>
        <active>true</active>
        <label>QA Test Scenario</label>
    </recordTypes>
    <recordTypes>
        <fullName>UAT_Test_Scenario</fullName>
        <active>true</active>
        <label>UAT Test Scenario</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Defect_Coment_required_if_Failed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Result__c, &apos;FAIL&apos;), 
ISBLANK(Defect_Comments__c))</errorConditionFormula>
        <errorMessage>Please enter Defect Comments</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Result_Change_On_Case_E7_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(Result__c),
ISPICKVAL(Result__c,&apos;Pass&apos;), 
RecordType.DeveloperName = &apos;UAT_Test_Scenario&apos;,
NOT(ISPICKVAL(Case__r.Status,&apos;E7 - UAT&apos;)),
AND(
NOT(ISPICKVAL(Case__r.Application__c ,&apos;AEM&apos;)),
NOT(ISPICKVAL(Case__r.Application__c ,&apos;Resource Center&apos;)),
NOT(ISPICKVAL(Case__r.Application__c,&apos;JDE&apos;)),
Case__r.RecordType.Name = &quot;Application Enhancement&quot;,
NOT(ISPICKVAL(Case__r.Application__c ,&apos;ITS Other&apos;))
)
)</errorConditionFormula>
        <errorMessage>Test scenario with record type UAT can have results changed only in status E7 - UAT</errorMessage>
    </validationRules>
</CustomObject>